# shell_shock

./: .env  .gitignore  README.md  example.env  main.py  media_index.json  plugin_settings.json  pyproject.toml  requirements.txt  test.py
docs/: plugins.md  python_uv.md  spotify_app.md  template_plugin.py
modules/: cli.py  logging_utils.py  media_handler.py  player.py  player_old.py  playlist_handler.py  plugin_manager.py  spotify.py  state_handler.py
playlists/: test.txt
plugins/: __init__.py  podcast_plugin.py  spotify_plugin.py  youtube_plugin.py
